--- a/index.html
+++ b/index.html
@@ -9,26 +9,36 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="body">
+<body >
     <header>
+        <section class="body raleway">
         <nav class="nav">
             <h3 class="inter logo">LOGO</h3>
             <a href=""><button class="btn-nav">Sign Up</button></a>
         </nav>
-        <main>
+        
             <div class="banner">
-                 <h3>Cool Dark UI Template for<br>Webflow Agencies!<br><button class="btn-banner">Stay Focused</button></h3>
-            </div>
-        <section>
-            <div>
-                <h3>See It in Action</h3>
-                <p>Explore the live preview and imagine your bran in this bold new look</p>
-                <button>Launch Live Preview</button>
-            </div>
-            <div>
-                <img src="">
+                <h3>Cool Dark UI Template for<br>Webflow Agencies!<br><button class="btn-banner">Stay Focused</button></h3>
             </div>
         </section>
+        <section class="action raleway">
+            <div>
+                <h3 class="action-bold">See It in Action</h3>
+                <p class="action-small">Explore the live preview and imagine your <br>brand in this bold new look</p>
+                <button class="btn-nav">Launch Live Preview</button>
+            </div>
+            <div>
+                <img id="wc" src="../../Assets\wc-mini.png" >
+            </div>
+        </section>
+        <section>
+            <h3>What our users say</h3>
+        </section>
+        <section>
+            
+        </section>
+        <main>
+
         </main>
     </header>
 </body>
