--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
                 <button class="btn-nav">Launch Live Preview</button>
             </div>
             <div>
-                <img id="wc" src="../../Assets\wc-mini.png" >
+                <img id="wc" src="Assets\wc-mini.png" >
+            </div>
+        <section>
+            <div>
+                <div>
+
+                </div>
             </div>
         </section>
         <section>
             <h3>What our users say</h3>
         </section>
         <section>
-            
+
         </section>
         <main>
 
