--- a/index.html
+++ b/index.html
@@ -30,15 +30,23 @@
             <div>
                 <img id="wc" src="Assets\wc-mini.png" >
             </div>
-        <section>
-            <div>
+        </section>
+        <section class="users">
+            <h2 class="stats-heading raleway">Joined Thousands of Productive Users</h2>
+            <div class="container inter">
                 <div>
-
+                    <div class="numbers">50K</div>
+                    <div class="label">Active Users</div>
+                </div>
+                <div class="stat-box">
+                    <div class="numbers">2M+</div>
+                    <div class="label">Focus Sessions</div>
+                </div>
+                <div class="stat-box">
+                    <div class="numbers">95%</div>
+                    <div class="label">Satisfaction Rate</div>
                 </div>
             </div>
-        </section>
-        <section>
-            <h3>What our users say</h3>
         </section>
         <section>
 
