--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body >
+<body>
+
     <header>
         <section class="body raleway">
         <nav class="nav">
@@ -21,39 +22,73 @@
                 <h3>Cool Dark UI Template for<br>Webflow Agencies!<br><button class="btn-banner">Stay Focused</button></h3>
             </div>
         </section>
-        <section class="action raleway">
-            <div>
-                <h3 class="action-bold">See It in Action</h3>
-                <p class="action-small">Explore the live preview and imagine your <br>brand in this bold new look</p>
-                <button class="btn-nav">Launch Live Preview</button>
-            </div>
-            <div>
-                <img id="wc" src="Assets\wc-mini.png" >
-            </div>
-        </section>
-        <section class="users">
-            <h2 class="stats-heading raleway">Joined Thousands of Productive Users</h2>
-            <div class="container inter">
-                <div>
-                    <div class="numbers">50K</div>
-                    <div class="label">Active Users</div>
-                </div>
-                <div class="stat-box">
-                    <div class="numbers">2M+</div>
-                    <div class="label">Focus Sessions</div>
-                </div>
-                <div class="stat-box">
-                    <div class="numbers">95%</div>
-                    <div class="label">Satisfaction Rate</div>
-                </div>
-            </div>
-        </section>
-        <section>
 
-        </section>
-        <main>
+        <main class="overall">
+            <section class="action raleway">
+                <div>
+                    <h3 class="action-bold">See It in Action</h3>
+                    <p class="action-small">Explore the live preview and imagine your <br>brand in this bold new look</p>
+                    <button class="btn-nav">Launch Live Preview</button>
+                </div>
+                <div>
+                    <img id="wc" src="Assets\wc-mini.png" >
+                </div>
+            </section>
+
+            <section class="users">
+                <h2 class="stats-heading raleway">Joined Thousands of Productive Users</h2>
+                <div class="container inter">
+                    <div>
+                        <div class="numbers">50K</div>
+                        <div class="label">Active Users</div>
+                    </div>
+                    <div>
+                        <div class="numbers">2M+</div>
+                        <div class="label">Focus Sessions</div>
+                    </div>
+                    <div>
+                        <div class="numbers">95%</div>
+                        <div class="label">Satisfaction Rate</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="login">
+                <form>
+                    <div class="login-container raleway">
+                        <div>
+                            <div class="login-welcome">Let's Get in<br> Touch</div>
+                        </div>
+                        <div>
+                            <div class="login-input"><input type="email" placeholder="example@email.com"></div>
+                            <div  class="login-input"><input type="text" placeholder="full name"><br></div>
+                            <div  class="login-input">
+                                <textarea rows="1"cols="50"> 
+                                write your message.....
+                                </textarea>
+                            </div>
+                            <div><button class="btn-login">Get in Tocuch</button></div>
+                        </div>
+                    </div>
+                </form>
+            <section>
+
 
         </main>
     </header>
 </body>
+<footer class="foot-main">
+    <div>
+        <div class="inter foot">LOGO</div>
+        <div class="foot-d">
+            <p>Ready to elevate your online presence? Contact us today to discuss <br>your project and discover how we can bring your vision to life.</p>
+        </div>
+        <div class="foot-c">
+            <div>Home</div>
+            <div>About</div>
+            <div>How it Works</div>
+            <div>Services</div>
+        </div>
+    </div>
+</footer>
 </html> 
