--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
                             <div class="login-welcome">Let's Get in<br> Touch</div>
                         </div>
                         <div>
-                            <div class="login-input"><input type="email" placeholder="example@email.com"></div>
-                            <div  class="login-input"><input type="text" placeholder="full name"><br></div>
-                            <div  class="login-input">
-                                <textarea rows="1"cols="50"> 
-                                write your message.....
-                                </textarea>
+                            <div>
+                               <label class=".login-inputlabels inter" for="email">Email</label><br>
+                                <input class="login-input" type="email" placeholder="    example@email.com"><br>
                             </div>
-                            <div><button class="btn-login">Get in Tocuch</button></div>
+                            <div>
+                               <br><label class=".login-inputlabels inter" for="name">Name</label><br>
+                                <input class="login-input" type="text" placeholder="   full name"><br>
+                            </div>
+                            <div>
+                                <br><label class=".login-inputlabels inter" for="message">Message</label><br>
+                                <textarea class="login-input" rows="1"cols="50" placeholder="  write your message...."></textarea><br>
+                            </div>
+                            <div><br><button class="btn-login">Get in Touch</button></div>
                         </div>
                     </div>
                 </form>
