--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </nav>
         
             <div class="banner">
-                <h3>Cool Dark UI Template for<br>Webflow Agencies!<br><button class="btn-banner">Stay Focused</button></h3>
+                <div>Cool Dark UI Template for<br>Webflow Agencies!</div>
+                <button class="btn-banner">Stay Focused</button>
             </div>
         </section>
 
