--- a/index.html
+++ b/index.html
@@ -54,6 +54,78 @@
                 </div>
             </section>
 
+            <section>
+                <h3 class="raleway review-head"> What our users say</h3>
+                <div class="review">
+                    <div class="card">
+                        <div class="star">
+
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                        </div>
+
+                        <div class="raleway"><h2>Loved by Designers</h2></div>
+                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="avatar">
+                            <div><img id ="icon" src="Assets\avatar.png"></div>
+                            <div>
+                                <div>Reviewer Name</div>
+                                <div>Date</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="star">
+
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                        </div>
+
+                        <div class="raleway"><h2>Loved by Designers</h2></div>
+                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="avatar">
+                            <div><img id ="icon" src="Assets\avatar.png"></div>
+                            <div>
+                                <div>Reviewer Name</div>
+                                <div>Date</div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="card">
+                        <div class="star">
+
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                            <div><img id=""src="Assets\icon-star.png"> </div>
+                        </div>
+
+                        <div class="raleway"><h2>Loved by Designers</h2></div>
+                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="avatar">
+                            <div><img id ="icon" src="Assets\avatar.png"></div>
+                            <div>
+                                <div>Reviewer Name</div>
+                                <div>Date</div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
             <section class="login">
                 <form>
                     <div class="login-container raleway">
@@ -78,7 +150,6 @@
                     </div>
                 </form>
             <section>
-
 
         </main>
     </header>
