--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                         </div>
 
                         <div class="raleway"><h2>Loved by Designers</h2></div>
-                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="raleway color1"><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
                         <div class="avatar">
                             <div><img id ="icon" src="Assets\avatar.png"></div>
                             <div>
-                                <div>Reviewer Name</div>
-                                <div>Date</div>
+                                <div class="raleway color2">Reviewer Name</div>
+                                <div class="raleway color3">Date</div>
                             </div>
                         </div>
                     </div>
@@ -91,12 +91,12 @@
                         </div>
 
                         <div class="raleway"><h2>Loved by Designers</h2></div>
-                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="raleway color1"><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
                         <div class="avatar">
                             <div><img id ="icon" src="Assets\avatar.png"></div>
                             <div>
-                                <div>Reviewer Name</div>
-                                <div>Date</div>
+                                <div class="raleway color2">Reviewer Name</div>
+                                <div class="raleway color3">Date</div>
                             </div>
                         </div>
                     </div>
@@ -113,12 +113,12 @@
                         </div>
 
                         <div class="raleway"><h2>Loved by Designers</h2></div>
-                        <div><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
+                        <div class="raleway color1"><p>This template instantly leveled up our<br> presence.” – Studio Vertex</p></div>
                         <div class="avatar">
                             <div><img id ="icon" src="Assets\avatar.png"></div>
                             <div>
-                                <div>Reviewer Name</div>
-                                <div>Date</div>
+                                <div class="raleway color2">Reviewer Name</div>
+                                <div class="raleway color3">Date</div>
                             </div>
                         </div>
                     </div>
